project_3/kubernetes/komposefiles/jupyter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: jupyter
  name: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jupyter
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/project-3-network: "true"
        io.kompose.service: jupyter
    spec:
      containers:
        - env:
            - name: AWS_ACCESS_KEY_ID
              value: admin
            - name: AWS_SECRET_ACCESS_KEY
              value: supersecret
            - name: MLFLOW_S3_ENDPOINT_URL
              value: http://10.43.101.158:8083
          image: candemas/project3:jupyter
          name: jupyter
          ports:
            - containerPort: 8088
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /jupyter_code
              name: jupyter-hostpath0
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/estudiante/MLOps/project_3/docker/jupyter
          name: jupyter-hostpath0
status: {}
