project_3/kubernetes/komposefiles/s3-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: s3
  name: s3
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
    - name: "8084"
      port: 8084
      targetPort: 8084
  selector:
    io.kompose.service: s3
status:
  loadBalancer: {}
